移除mybatis相关